@@ -4,6 +4,8 @@ Changelog (English)
 1.3.5
 Redesigned interface (include ActionBarSherlock)
 Improved autostart feature
+Automatic update operating environment
+Added check superuser permissions (root)
 
 1.3.4
 Added command status to linuxdeploy script
@@ -169,6 +171,8 @@ Updated list packages of base system installation
 1.3.5
 Переработан интерфейс (добавлен ActionBarSherlock)
 Доработана функция автозапуска
+Автоматическое обновление рабочего окружения
+Добавлена проверка привилегий суперпользователя (root)
 
 1.3.4
 Добавлена команда status в скрипт linuxdeploy
